# anthropic-assignment

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  SCRIPTS.md  pyproject.toml
docs/: MOCK_TRANSCRIPT.md  SCRIPTS.md
scenarios/: fintech_discovery.json
scripts/: demo_skills_api.py
skills/architecture/: SKILL.md
skills/architecture/references/: algorithm_faq.md  data_flow.md  system_overview.md
skills/case_studies/: SKILL.md
skills/case_studies/references/: fintech_beta_bank.md  healthcare_pilot.md
skills/cdp_context_editing/: SKILL.md
skills/cdp_context_editing/learnings/: 2025-12-14_finbot_(series_b_fintech,_50k+.md  2025-12-14_finbot_is_a_series_b_fintech_s.md  2025-12-14_finbot_is_a_series_b_fintech_s_1.md  (+1 more)
skills/cdp_memory/: SKILL.md
skills/cdp_skills/: SKILL.md
skills/fintech_patterns/: SKILL.md
skills/interview_records/: SKILL.md
skills/pricing/: SKILL.md
skills/pricing_guidance/: SKILL.md
skills/roadmap/: SKILL.md
skills/security/: SKILL.md
src/: __init__.py  config.py  fallback.py  main.py
src/agents/: __init__.py  answerer.py  postcall.py  prep.py  router.py  summarizer.py
src/api/: routes.py
src/models/: __init__.py  answerer.py  events.py  postcall.py  prep.py  router.py  summarizer.py  transcript.py
src/services/: __init__.py  orchestrator.py  session.py  simulation.py  skills.py  transcript.py
src/skills/: __init__.py  manager.py  registry.py
static/: app.js  styles.css
templates/: base.html  index.html  landing.html  session.html  skills.html  summary.html
(+29 files in other folders)
