[project]
name = "sales-copilot"
version = "0.1.0"
description = "Technical Sales Interview Copilot - Claude Skills Demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
]

[project.scripts]
copilot = "src.main:run"
skills = "src.skills.manager:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
