[project]
name = "sales-copilot"
version = "0.1.0"
description = "Technical Sales Copilot - Production-grade Claude Skills Demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "elevenlabs>=1.0.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.2.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
